@@ -60,25 +60,22 @@ void _gptrput1(void) _naked
     /* data are already in FSR0 */
     movff	_PRODL, _POSTINC0
     
-    goto _end_
+    return
     
 
 _lab_01_:
     /* code or eeprom */
-    btfsc	_WREG, 6
-    goto	_lab_02_
+    btfss	_WREG, 6
+    return
     
     /* code pointer, cannot write code pointers */
     
-    goto _end_
- 
-  
 _lab_02_:
     /* EEPROM pointer */
 
     /* unimplemented yet */
 
-_end_:
 
+  return
   _endasm;
 }
